--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     
        <section class="section-cities">
         <div class="row">
-                <h2>We serve these cities</h2>
+                <h2>We serve these cities!</h2>
             </div>
             <div class="row">
                 <div class="col span-1-of-4 box">
