--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" type="text/css">
-        <title>High Five Farm</title>
+        <title>High Five Farm!</title>
     </head>
     <body>
         <header>
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col span-1-of-4 box">
                     <img src="resources/img/Louisville.jpg" alt="Louisville">
-                    <h3>Louisville</h3>
+                    <h3>Louisville lol</h3>
                     <!--<div class="city-feature">
                     <i class="ion-ios-home icon-small"></i>
                     Germantown, Self-Serve Pick up
