--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#section-farmers">The Farm(ers)</a></li>
                     <li><a href="#section-plans">Eat Our Veggies</a></li>
                     <li><a href="https://docs.google.com/document/d/e/2PACX-1vRojTXBeHXBSVVeBxgYGKsdiNfgFwTGj7MGkjon-MfkPB4Zj69kpy-rsAwz0GzVtnnH7Nn2TJ_50eoD/pub" target="_blank" rel="noopener noreferrer">Farm Wishlist</a></li>
+                    <li><a href="#section-free-vegetable-fund">Free Vegetable Fund</a></li>
                     </ul>
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                 </div>
@@ -320,18 +321,17 @@
             </p>
         </section>
         <section class="section-free-vegetable-fund">
-            <h2>Free Vegetable Fund</h2>
-            <p>
+            <h2 id="section-free-vegetable-fund">Free Vegetable Fund</h2>
+            <article>
             Access to fresh and healthy food is a basic human right. During our inaugural season, we were able to offer ⅓ of our shares at no cost to families seeking assistance accessing fresh produce. This effort was achieved through community crowd sourced funds. Let us offer FREE produce again this season by contributing today.
-            </p><br>
+            </article><br>
             <p>
-            <ion-icon name="logo-venmo"></ion-icon>
-            <strong>Venmo:</strong><br> @highfivefarmky memo free vegetable fund</p><br>
+            <strong>Venmo:</strong><br><a href="https://venmo.com/highfivefarmky">@highfivefarmky</a><br><br>
+             <i>MEMO:<q>Free Vegetable Fund</q></i></p><br>
             <p>
-                <strong>Checks mailed to:</strong><br>9335 McCowans Ferry Rd<br>
-                 Versailles KY 40383<br>
-                  memo free vegetable fund
-            </p><br>
+                <strong>Checks mailed to:</strong><i><br>9335 McCowans Ferry Rd<br>
+                 Versailles KY 40383</i><br><br>
+               <i>MEMO:<q>Free Vegetable Fund</q></i></p><br>
             <p>
                 <strong>Cards:</strong><br><a href="https://highfivefarmky.square.site/free-vegetable-fund">Visit Square Site</a>
             </p>
