minor spelling error

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <i class="ion-ios-cart-outline icon-big"></i>
                     <h3>Farmer's Markets</h3>
                     <p>
-                    Find us at the Franklin County Farmers Market on Tuesdays, Thursdays, and Saturdays.
+                    Find us at the Franklin County Farmers Market on Tuesdays, Thursdays and Saturdays.
 
                     </p>
                 </div>
