--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="https://highfivefarmky.square.site/csa-sign-up" class="btn btn-ghost">Sign up now</a>
+                        <a href="https://highfivefarmky.square.site" class="btn btn-ghost">Sign up now</a>
                     </div>
                 </div>
                 </div>
