--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="https://highfivefarmky.square.site/csa-sign-up" class="btn btn-full" style="font-family: Lato">Sign up now</a>
+                        <a href="https://highfivefarmky.square.site" class="btn btn-full" style="font-family: Lato">Sign up now</a>
                     </div>
                 </div>
                 </div>
@@ -321,7 +321,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="https://highfivefarmky.square.site/csa-sign-up" class="btn btn-ghost" style="font-family: Lato">Sign up now</a>
+                        <a href="https://highfivefarmky.square.site" class="btn btn-ghost" style="font-family: Lato">Sign up now</a>
                     </div>
                 </div>
                 </div>
