CSA example photos

--- a/index.html
+++ b/index.html
@@ -351,6 +351,58 @@
             
             </p>
         </section>
+
+        <!--CSA EXAMPLES-->
+
+        <section class="section-meals">
+            <ul class="meals-showcase">
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0002.jpg" alt="The Farmer's Market">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0003.jpg" alt="Fresh made pickles">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0001.jpg" alt="Cucumbers">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0004.jpg" alt="Beets">
+                    </figure>
+                </li>
+            </ul>
+             <ul class="meals-showcase">
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0005.jpg" alt="Turnips and squash">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0006.jpg" alt="Farm dogs, Kira and Skeeter">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0007.jpg" alt="Lettuce">
+                    </figure>
+                </li>
+                <li>
+                    <figure class="meal-photo">
+                        <img src="resources/img/img_0008.jpg" alt="Peppers">
+                    </figure>
+                </li>
+            </ul>
+        </section>
+
+
+
         <section class="section-free-vegetable-fund">
             <h2 id="section-free-vegetable-fund">Free Vegetable Fund</h2>
             <article>
