resized about us photo and fixed hero sizing issue

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h2>About Us</h2>
                     <figure>
                        <div class="farm-owners" id="section-farmers">
-                        <img src="resources/img/chelalexsmiling.jpg" alt="Chelsea and Alex portrait">
+                        <img src="resources/img/cucumbers.jpg" alt="Chelsea and Alex portrait">
                         <!--<figcaption class="figcaption"><i>Photo Credit: Asa Massie</i></figcaption> -->
                         </div>
                     </figure>
@@ -438,8 +438,8 @@
 
         <section class="section-form" id="section-form">
             <h2>Contact Us</h2>
-            <iframe class="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSfv6oInuOCFec-rkJ34fnYsbZlWqX34elADC_W31HfIZHjnQA/viewform?embedded=true" 
-                width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            
+            <iframe class="google-form-2" src="https://docs.google.com/forms/d/e/1FAIpQLSfv6oInuOCFec-rkJ34fnYsbZlWqX34elADC_W31HfIZHjnQA/viewform?embedded=true" width="400" height="697" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </section>
         
 
