changed photo gallery image and photo locations

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/cucumbers.jpg" alt="The Farmer's Market">
+                        <img src="resources/img/rows.jpg" alt="Rows of crops">
                     </figure>
                 </li>
                 <li>
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/marketspread.jpg" alt="Cucumbers">
+                        <img src="resources/img/farmdogs.jpg" alt="Cucumbers">
                     </figure>
                 </li>
                 <li>
@@ -126,12 +126,12 @@
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/farmdogs.jpg" alt="Farm dogs, Kira and Skeeter">
+                        <img src="resources/img/lettuce.jpg" alt="Farm dogs, Kira and Skeeter">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/lettuce.jpg" alt="Lettuce">
+                        <img src="resources/img/marketspread.jpg" alt="Lettuce">
                     </figure>
                 </li>
                 <li>
@@ -408,7 +408,7 @@
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0008.jpg" alt="Plants">
+                        <img src="resources/img/img_0008.jpg" alt="Plants" id="section-free-vegetable-fund">
                     </figure>
                 </li>
             </ul>
@@ -416,11 +416,11 @@
 
         <section class="section-free-vegetable-fund">
             <h2>Free Vegetable Fund</h2>
-            <article  id="section-free-vegetable-fund">
-            Access to fresh and healthy food is a basic human right. During our inaugural season, we were able to 
+            <article>
+            <p>Access to fresh and healthy food is a basic human right. During our inaugural season, we were able to 
             offer one third of our shares at no cost to families seeking assistance accessing fresh produce. 
             This effort was achieved through community crowd sourced funds. Let us offer FREE produce again 
-            this season by contributing today.
+            this season by contributing today.</p>
             </article><br>
             <p>
             <strong>Venmo:</strong><br><a href="https://venmo.com/highfivefarmky">@highfivefarmky</a><br><br>
