Changed alt names

--- a/index.html
+++ b/index.html
@@ -371,44 +371,44 @@
             <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0002.jpg" alt="Plant blooms">
+                        <img src="resources/img/img_0002.jpg" alt="CSA Example 1">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0003.jpg" alt="Collards">
+                        <img src="resources/img/img_0003.jpg" alt="CSA Example 2">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0001.jpg" alt="Chelly and Alex">
+                        <img src="resources/img/img_0001.jpg" alt="CSA Example 3">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0004.jpg" alt="Alex tending to the plants">
+                        <img src="resources/img/img_0004.jpg" alt="CSA Example 4">
                     </figure>
                 </li>
             </ul>
              <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0005.jpg" alt="High Tunnel Tomato Plants">
+                        <img src="resources/img/img_0005.jpg" alt="CSA Example 5">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0006.jpg" alt="Garlic Growing">
+                        <img src="resources/img/img_0006.jpg" alt="CSA Example 6">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0007.jpg" alt="Plants">
+                        <img src="resources/img/img_0007.jpg" alt="CSA Example 7">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0008.jpg" alt="Plants" id="section-free-vegetable-fund">
+                        <img src="resources/img/img_0008.jpg" alt="CSA Example 8" id="section-free-vegetable-fund">
                     </figure>
                 </li>
             </ul>
