changed image paths

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0002.jpg" alt="Plant blooms">
+                        <img src="resources/img/csa_1.jpg" alt="Plant blooms">
                     </figure>
                 </li>
                 <li>
