changed CSA gallery image names

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     </ul>
         
 
+                    
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                 </div>
             </nav>
@@ -371,44 +372,44 @@
             <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/csa_1.jpg" alt="Plant blooms">
+                        <img src="resources/img/csa_1.jpg" alt="CSA Example 1">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0003.jpg" alt="CSA Example 2">
+                        <img src="resources/img/csa_2.jpg" alt="CSA Example 2">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0001.jpg" alt="CSA Example 3">
+                        <img src="resources/img/csa_3.jpg" alt="CSA Example 3">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0004.jpg" alt="CSA Example 4">
+                        <img src="resources/img/csa_4.jpg" alt="CSA Example 4">
                     </figure>
                 </li>
             </ul>
              <ul class="meals-showcase">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0005.jpg" alt="CSA Example 5">
+                        <img src="resources/img/csa_5.jpg" alt="CSA Example 5">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0006.jpg" alt="CSA Example 6">
+                        <img src="resources/img/csa_6.jpg" alt="CSA Example 6">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0007.jpg" alt="CSA Example 7">
+                        <img src="resources/img/csa_7.jpg" alt="CSA Example 7">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/img_0008.jpg" alt="CSA Example 8" id="section-free-vegetable-fund">
+                        <img src="resources/img/csa_8.jpg" alt="CSA Example 8" id="section-free-vegetable-fund">
                     </figure>
                 </li>
             </ul>
