changed nav bar size for media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#section-farmers">The Farm(ers)</a></li>
                     <li><a href="https://docs.google.com/document/d/e/2PACX-1vRojTXBeHXBSVVeBxgYGKsdiNfgFwTGj7MGkjon-MfkPB4Zj69kpy-rsAwz0GzVtnnH7Nn2TJ_50eoD/pub" target="_blank" rel="noopener noreferrer">Farm Wishlist</a></li>
                     <li><a href="#section-free-vegetable-fund">Free Vegetable Fund</a></li>
-                    <li><a href="https://highfivefarmky.square.site/">Online Store</a></li>
+                    <!--<li><a href="https://highfivefarmky.square.site/">Online Store</a></li>-->
                     <li><a href="#section-features">Availability</a></li>
                     <li><a href="#section-form">Contact</a></li>
                     </ul>
@@ -91,7 +91,7 @@
                     <i class="ion-ios-calendar-outline icon-big"></i>
                     <h3>Growing Year &#39Round</h3>
                     <p>
-                        We grow veggies every season! See what we’re up to <a href="http://instagram.com/highfivefarmky">right now</a>!
+                        We grow veggies every season! See what we are up to <a href="http://instagram.com/highfivefarmky">right now</a>!
                     </p>
                 </div>
             </div>
