added mobile nav JS file

--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
         <script src="//cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
         <script src="vendors/js/jquery.waypoints.min.js"></script>
         <script src="Resources/JS/script.js"></script>
+        <script src="resources/js/mobile_nav.js"></script>
 
 
 
