--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
         <script src="vendors/js/jquery.waypoints.min.js"></script>
         <script src="Resources/JS/script.js"></script>
         <script src="resources/js/mobile_nav.js"></script>
+        <script src="resources/js/sticky_nav.js"></script>
 
 
 
